{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 332,
  "lineage": "c3481fc1-5907-e7d9-e69e-3bbccf17274f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkin-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3c53b11504fb776",
            "associate_with_private_ip": "10.1.1.20",
            "association_id": "eipassoc-09cd06b30e672b22e",
            "domain": "vpc",
            "id": "eipalloc-0b3c53b11504fb776",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-099997266c7456ce2",
            "private_dns": "ip-10-1-1-20.ap-south-1.compute.internal",
            "private_ip": "10.1.1.20",
            "public_dns": "ec2-3-111-64-81.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.64.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_network_interface.jenkins-nic",
            "aws_security_group.jenkins-sg",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbaa9bcc895577b9",
            "associate_with_private_ip": "10.1.1.21",
            "association_id": "eipassoc-0cb2844088d94eed2",
            "domain": "vpc",
            "id": "eipalloc-0dbaa9bcc895577b9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c6fe82b6487c8313",
            "private_dns": "ip-10-1-1-21.ap-south-1.compute.internal",
            "private_ip": "10.1.1.21",
            "public_dns": "ec2-3-111-191-142.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.191.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_network_interface.server-nic",
            "aws_security_group.jenkins-sg",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2e255ec956ade7f",
            "arn": "arn:aws:ec2:ap-south-1:667123756267:instance/i-0d83e5bac12ea63d3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d83e5bac12ea63d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-099997266c7456ce2"
              }
            ],
            "primary_network_interface_id": "eni-099997266c7456ce2",
            "private_dns": "ip-10-1-1-20.ap-south-1.compute.internal",
            "private_ip": "10.1.1.20",
            "public_ip": "3.111.64.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d295b5b36bf512e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062eaad0f8025a51a",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a6afa59ee6bb503"
            ]
          },
          "dependencies": [
            "aws_network_interface.jenkins-nic",
            "aws_security_group.jenkins-sg",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc",
            "data.aws_ami.latest-ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2e255ec956ade7f",
            "arn": "arn:aws:ec2:ap-south-1:667123756267:instance/i-0be2915ff841c56cf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be2915ff841c56cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c6fe82b6487c8313"
              }
            ],
            "primary_network_interface_id": "eni-0c6fe82b6487c8313",
            "private_dns": "ip-10-1-1-21.ap-south-1.compute.internal",
            "private_ip": "10.1.1.21",
            "public_ip": "3.111.191.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cbad9c6f18f3e62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062eaad0f8025a51a",
            "tags": {
              "Name": "deployer-server"
            },
            "tags_all": {
              "Name": "deployer-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01a6afa59ee6bb503"
            ]
          },
          "dependencies": [
            "aws_network_interface.server-nic",
            "aws_security_group.jenkins-sg",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc",
            "data.aws_ami.latest-ubuntu1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:internet-gateway/igw-0f175cf32725d3e5e",
            "id": "igw-0f175cf32725d3e5e",
            "owner_id": "667123756267",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "vpc_id": "vpc-09db1723f5457b221"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:network-interface/eni-099997266c7456ce2",
            "id": "eni-099997266c7456ce2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b0:8c:ba:97:8c",
            "owner_id": "667123756267",
            "private_ip": "10.1.1.20",
            "private_ip_list": [
              "10.1.1.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a6afa59ee6bb503"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062eaad0f8025a51a"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:network-interface/eni-0c6fe82b6487c8313",
            "id": "eni-0c6fe82b6487c8313",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:75:d7:d3:3b:a2",
            "owner_id": "667123756267",
            "private_ip": "10.1.1.21",
            "private_ip_list": [
              "10.1.1.21"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.21"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a6afa59ee6bb503"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062eaad0f8025a51a"
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:route-table/rtb-0ff633780dc90d1c7",
            "id": "rtb-0ff633780dc90d1c7",
            "owner_id": "667123756267",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f175cf32725d3e5e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db1723f5457b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007d86c001e0c8f8b",
            "route_table_id": "rtb-0ff633780dc90d1c7",
            "subnet_id": "subnet-062eaad0f8025a51a"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_route_table.jenkins-rt",
            "aws_subnet.jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:security-group/sg-01a6afa59ee6bb503",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a6afa59ee6bb503",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-rules",
            "name_prefix": "",
            "owner_id": "667123756267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db1723f5457b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:subnet/subnet-062eaad0f8025a51a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062eaad0f8025a51a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667123756267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "vpc_id": "vpc-09db1723f5457b221"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667123756267:vpc/vpc-09db1723f5457b221",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03801b59b0b193507",
            "default_route_table_id": "rtb-049c3cf46f1bf7b40",
            "default_security_group_id": "sg-090b47ee1df6f5fa3",
            "dhcp_options_id": "dopt-5c05b737",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09db1723f5457b221",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049c3cf46f1bf7b40",
            "owner_id": "667123756267",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            }
          }
        }
      ]
    }
  ]
}